[tool.poetry]
name = "fastapi-simple-test"
version = "0.1.0"
description = "Simple endpoint with fastapi"
authors = ["Jonatas Oliveira <contact@jonatasoliveira.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = {version = "^0.15.0", extras = ["standard"]}
pytest = "^6.2.5"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
